--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         <option value="England">England</option>
         <option value="Netherlands">Netherlands</option>
         <option value="Germany">Germany</option>
+        <option value="Thailand">Thailand</option>
+        <option value="America">America</option>
     </select>
     <p class="weather_main"></p>
     <p class="weather_disc">Cloudy with wind</p>
